<resources>
    <string name="app_name">E-Mazing</string>
    <string name="title">E-Mazing Encryption</string>

    <string name="encryption_desc">Encryption is the process of converting information or data into a code to prevent unauthorized access.
        It uses algorithms to transform readable data (plaintext) into an unreadable format (ciphertext).
        Only those with the correct decryption key can access the original information.</string>

    <string name="placeholder">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam officia accusantium nisi magni est repellendus facilis distinctio quia dicta corrupti.</string>
    <string name="hash">eyJpdiI6IkYzYytHNVFielRQVUFSd1NOWTdlK1E9PSIsCiJ2IjoxLAoiaXRlciI6MTAwMCwKImtzIjoyNTYsCiJ0cyI6NjQsCiJtb2RlIjoiY2NtIiwKImFkYXRhIjoiIiwKImNpcGhlciI6ImFlcyIsCiJzYWx0IjoiWC9NMzdVN1Z3UGc9IiwKImN0IjoiRDJmT203b2diNzlDM2NFRCJ9</string>

    <string name="aes_decription">The Advanced Encryption Standard (AES) is a symmetric encryption algorithm widely used across the globe to secure data.
        Established by the National Institute of Standards and Technology (NIST) in 2001, AES is a robust and efficient encryption standard that replaced the older Data Encryption Standard (DES).</string>

    <string name="congrats_message">Congratulations on completing your encryption journey! You\'ve unlocked the secrets of encryption.</string>

    <string name="rsa_description">RSA is a public-key encryption algorithm named after its inventors Rivest, Shamir, and Adleman.
        Introduced in 1977, RSA is widely used for securing sensitive data, particularly in secure communications and digital signatures.
        It is based on the mathematical difficulty of factoring large integers.</string>

    <string name="des_description">The Data Encryption Standard (DES) is a symmetric encryption algorithm that was widely used from the mid-1970s until the early 2000s.
        It was developed by IBM and adopted as a federal standard by the United States in 1977.
        Although it has been largely replaced by AES due to security concerns, DES played a foundational role in the development of modern encryption algorithms.</string>

    <string name="blowfish_description">Blowfish is a symmetric-key block cipher designed by Bruce Schneier in 1993.
        Known for its speed and effectiveness, Blowfish was widely adopted for encryption in software applications.
        While not as common today due to the rise of AES, Blowfish remains notable for its flexibility and high performance.</string>

    <string name="v64_description">Vigenere64 is our experimental encryption algorithm that combines the concept of Vigenere cipher to Base64 encoding.
        It is not a standard or widely known encryption algorithm but rather a hybrid of existing concepts.
        If you intend to use this for encryption in practical scenarios, be cautious, as it does not provide strong security by modern cryptographic standards.</string>

    <string name="ref1"><u>AES wiki</u></string>
    <string name="ref2"><u>Data Encryption</u></string>
    <string name="ref3"><u>Encryption wiki</u></string>
    <string name="ref4"><u>Data Encryption guide</u></string>

    <string name="creator1"><u>Joseph Tristan Subong</u></string>
    <string name="creator2"><u>Vince Alwyn Sibay</u></string>
    <string name="creator3"><u>Leonard Vir-neil Omadle</u></string>

    <string-array name="encryptions_algs">
        <item>AES (Advanced Encryption Standard)</item>
        <item>RSA (Rivest Shamir Adleman)</item>
        <item>DES (Data Encryption Standard)</item>
        <item>Blowfish</item>
        <item>Vigenere64</item>
    </string-array>

</resources>