<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EncryptActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white">

        <!--HEADER-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="20dp">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/shield_keyhole"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/title"
                android:textStyle="bold"
                android:layout_marginLeft="10dp"
                android:textSize="20dp"
                android:gravity="center_vertical"
                android:fontFamily="@font/space_mono_bold"
                android:textColor="@color/green"
                android:id="@+id/txtAppName"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@drawable/gradient_background_to_light">

        </LinearLayout>

        <!--BODY-->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="30dp"
                android:paddingTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Common Types of Encryption"
                    android:fontFamily="@font/space_mono_bold"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:layout_marginVertical="20dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="20dp"
                    android:orientation="vertical"
                    android:background="@drawable/shadow_border"
                    android:paddingVertical="10dp"
                    android:layout_marginVertical="10dp"
                    android:id="@+id/encryption1"
                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="AES (Advanced Encryption Standard)"
                        android:textSize="16dp"
                        android:fontFamily="@font/space_mono_bold"
                        android:textColor="@color/black"
                        android:id="@+id/txtEncName1"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/aes_decription"
                        android:layout_marginTop="10dp"
                        android:textSize="14dp"
                        android:fontFamily="@font/space_mono_regular"
                        android:textStyle="bold"
                        android:textColor="@color/gray"
                        android:ellipsize="end"
                        android:maxHeight="80dp"
                        android:maxLines="3"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="20dp"
                    android:orientation="vertical"
                    android:background="@drawable/shadow_border"
                    android:paddingVertical="10dp"
                    android:layout_marginVertical="10dp"
                    android:id="@+id/encryption2"
                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="RSA (Rivest Shamir Adleman)"
                        android:textSize="16dp"
                        android:fontFamily="@font/space_mono_bold"
                        android:textColor="@color/black"
                        android:id="@+id/txtEncName2"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/rsa_description"
                        android:layout_marginTop="10dp"
                        android:textSize="14dp"
                        android:fontFamily="@font/space_mono_regular"
                        android:textStyle="bold"
                        android:textColor="@color/gray"
                        android:ellipsize="end"
                        android:maxHeight="80dp"
                        android:maxLines="3"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="20dp"
                    android:orientation="vertical"
                    android:background="@drawable/shadow_border"
                    android:paddingVertical="10dp"
                    android:layout_marginVertical="10dp"
                    android:id="@+id/encryption3"
                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="DES (Data Encryption Standard)"
                        android:textSize="16dp"
                        android:fontFamily="@font/space_mono_bold"
                        android:textColor="@color/black"
                        android:id="@+id/txtEncName3"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/des_description"
                        android:layout_marginTop="10dp"
                        android:textSize="14dp"
                        android:fontFamily="@font/space_mono_regular"
                        android:textStyle="bold"
                        android:textColor="@color/gray"
                        android:ellipsize="end"
                        android:maxHeight="80dp"
                        android:maxLines="3"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="20dp"
                    android:orientation="vertical"
                    android:background="@drawable/shadow_border"
                    android:paddingVertical="10dp"
                    android:layout_marginVertical="10dp"
                    android:id="@+id/encryption4"
                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Blowfish"
                        android:textSize="16dp"
                        android:fontFamily="@font/space_mono_bold"
                        android:textColor="@color/black"
                        android:id="@+id/txtEncName4"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/blowfish_description"
                        android:layout_marginTop="10dp"
                        android:textSize="14dp"
                        android:fontFamily="@font/space_mono_regular"
                        android:textStyle="bold"
                        android:textColor="@color/gray"
                        android:ellipsize="end"
                        android:maxHeight="80dp"
                        android:maxLines="3"
                        />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Uncommon Types of Encryption"
                    android:fontFamily="@font/space_mono_bold"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:layout_marginVertical="20dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="20dp"
                    android:orientation="vertical"
                    android:background="@drawable/shadow_border"
                    android:paddingVertical="10dp"
                    android:layout_marginVertical="10dp"
                    android:id="@+id/encryption5"
                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Vigenere64"
                        android:textSize="16dp"
                        android:fontFamily="@font/space_mono_bold"
                        android:textColor="@color/black"
                        android:id="@+id/txtEncName5"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/v64_description"
                        android:layout_marginTop="10dp"
                        android:textSize="14dp"
                        android:fontFamily="@font/space_mono_regular"
                        android:textStyle="bold"
                        android:textColor="@color/gray"
                        android:ellipsize="end"
                        android:maxHeight="80dp"
                        android:maxLines="3"
                        />

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="15dp"
            android:background="@color/black">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_weight="1"
                android:src="@drawable/home"
                app:tint="@color/white"
                android:id="@+id/navHome"
                />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_weight="1"
                android:src="@drawable/lock"
                app:tint="@color/white"
                android:id="@+id/navEncrypt"
                />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_weight="1"
                android:src="@drawable/key"
                app:tint="@color/white"
                android:id="@+id/navDecrypt"
                />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_weight="1"
                android:src="@drawable/shield_cross"
                app:tint="@color/green"
                />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_weight="1"
                android:src="@drawable/info"
                app:tint="@color/white"
                android:id="@+id/navInfo"
                />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>